--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,33 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="Learn how to transform a wireframe into responsive HTML and CSS web code,">
+    <title>Wireframe to Web Code</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
     <header>
-      <h1>Wireframe</h1>
-      <p>
-        This is the default, provided code and no changes have been made yet.
-      </p>
-    </header>
+      <header class="header">
+        <h1>WIREFRAME TO WEB CODE</h1>
+        <p>A wireframe to web code process is the transformation of a visual layout plan into actual, functional web pages. <br> It's the process of turning a static design blueprint into a working website or a app.</p></p>
+      </header>
+
+        <article>
+         <img srcset="img/codelapi.webp" alt="code" sizes="(width =< 600px) 480px, 800px" fetchpriority="high"/>     
+          <div class="article">
+          <h2>What's the purpose of a Wireframe</h2>
+          <p>A wireframe to web code process is the transformation of a visual layout plan into actual, functional web pages. <br>It's the process of turning a static design blueprint into a working website or app.</p>
+          <a href="https://www.productplan.com/glossary/wireframe/" target="_blank" rel="noopener noreferrer">Read more about Wireframes</a>
+        </div>
+        </article>
+      
+      </section>
+      </header>
+
     <main>
-      <article>
-        <img src="placeholder.svg" alt="" />
-        <h2>Title</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-          voluptates. Quisquam, voluptates.
-        </p>
-        <a href="">Read more</a>
-      </article>
+        <section class="articles-container">
+
+            <article>
+              <img src="img/readme.webp" alt="Readme" fetchpriority="high">
+                <h2>What is the purpose of a README file?</h2>
+                <p>A README file is a "manual" for your project. It's the first file someone should read. It explains what the project is, how to install and use it, and how to contribute.</p>
+                <a href="https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-readmes" target="_blank" rel="noopener noreferrer">Read more about README file</a>
+            </article>
+
+            <article>
+              <img src="img/forkgit.webp" alt="forkgit" fetchpriority="high">
+                <h2>What is a Git Branch?</h2>
+                <p>A Git branch is an independent "copy" of your project you can work on in isolation. It lets you develop new features (like a 'bio-page') without affecting the main 'main' version of your code.</p>
+                <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank" rel="noopener noreferrer">Read more about Git-Branch</a>
+            </article>
+
+        </section>
     </main>
+
     <footer>
-      <p>
-        This is the default, provided code and no changes have been made yet.
-      </p>
+        <p>This project was done by Ifeyinwa_Ofulue a.k.a Dresumewill</p> 
+        <p>&copy; 2025 My Wireframe to Web Code</p>
     </footer>
-  </body>
+    
+</body>
 </html>
