updated the wireframe/index.html

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -16,7 +16,7 @@
       </header>
 
         <article>
-         <img srcset="img/codelapi.webp" alt="code" sizes="(width =< 600px) 480px, 800px" fetchpriority="high"/>     
+         <img srcset="img/codee.webp" alt="code" sizes="(width =< 600px) 480px, 800px" fetchpriority="high"/>     
           <div class="article">
           <h2>What's the purpose of a Wireframe</h2>
           <p>A wireframe to web code process is the transformation of a visual layout plan into actual, functional web pages. <br>It's the process of turning a static design blueprint into a working website or app.</p>
