--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -3,13 +3,118 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>My form exercise</title>
+    <title>T-Shirt Order Form</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <style>
+      body {
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin: 0;
+        padding: 2rem;
+        background-color: #c053260f;
+        color: #333;
+      }
+
+      form { 
+        max-width: 500px; 
+        margin: 0 auto;
+        padding: 2rem;
+        background-color: #9e9e9e1a;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border: 1px solid #ddd; 
+      }
+
+      header, footer {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      fieldset {
+        border: 1px solid #ccc;
+        padding: 1rem 1.5rem;
+        border-radius: 5px;
+        margin-bottom: 15px;
+      }
+
+      legend {
+        font-weight: bold;
+        padding: 0 0.5rem;
+        font-size: 1.2rem;
+      }
+
+      .form-group {
+        margin-bottom: 1..5rem;
+      }
+
+      label {
+        display: block;
+        margin-bottom: 3px;
+        margin-top: 15px;
+      }
+
+      input[type="text"],
+      input[type="email"],
+      select {
+        display: block;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        width: 100%;
+        padding: 8px;
+        box-sizing: border-box;
+      }
+
+      .radio-group label {
+        display: inline-block;
+        font-weight: normal;
+        margin-right: 1.5rem;
+        margin-bottom: 0;
+      }
+
+      .radio-group input[type="radio"] {
+        margin-right: 5px;
+      }
+
+      input:invalid, 
+      select:invalid {
+        border-color: #c05326;
+        box-shadow: 0 0 5px #c05326;
+        background-color: #f9ece5;
+      }
+
+      button[type="submit"] {
+        display: block;
+        margin-top: 1rem;
+        width: 100%;
+        font-size: 1.1rem;
+        padding: 1rem;
+        font-weight: 600;
+        background-color: #c05326;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    
+      }
+      button[type="submit"]:hover {
+        background-color: #a0421e;
+      }
+
+      footer p {
+        font-size: 0.9rem;
+        color: #f9ecef;
+        background-color: #c05326;
+        display: inline-block;
+        padding: 0.5rem 9rem;
+        border-radius: 5px;
+      }
+    </style>
   </head>
   <body>
     <header>
-      <h1>Product Pick</h1>
+      <h1>T-Shirt Order Form</h1>
     </header>
     <main>
       <form>
@@ -17,11 +122,11 @@
         <!-- 
           try writing out the requirements first as comments
         this will also help you fill in your PR message later-->
-      </form>
-    </main>
-    <footer>
-      <!-- change to your name-->
-      <h2>By HOMEWORK SOLUTION</h2>
-    </footer>
-  </body>
-</html>
+
+        <!-- Requirements:
+          1. What is the customer's name? I must collect this data, and validate it. But what is a valid name? I must decide something.
+          2. What is the customer's email? I must make sure the email is valid. Email addresses have a consistent pattern.
+          3. What colour should this t-shirt be? I must give 3 options. How will I make sure they don't pick other colours?
+          4. What size does the customer want? I must give the following 6 options: XS, S, M, L, XL, XXL -->
+
+          
