customer can choose from the selected color

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -152,4 +152,33 @@
                   placeholder="myemail@example.com" />
             </div>
 
+            <div class="form-group radio-group" >
+                <label>Color:</label>
+                <div>
+                  <input type="radio" 
+                  id="color-red" 
+                  name="tshirt_color" 
+                  value="red" required>
+                  <label for="color-red">Red</label>
+
+                  <input type="radio"
+                  id="color-blue"
+                  name="tshirt_color"
+                  value="blue">
+                  <label for="color-blue">Blue</label>
+
+                  <input type="radio"
+                  id="color-green"
+                  name="tshirt_color"
+                  value="green">
+                  <label for="color-green">Green</label>
+
+                  <input type="radio"
+                  id="color-black"
+                  name="tshirt_color"
+                  value="black">
+                  <label for="color-black">Black</label>
+                </div>
+            </div>
+
             
