customer size updated from sx - xxl

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -181,4 +181,18 @@
                 </div>
             </div>
 
+            <!-- T-Shirt Size -->
+            <div class="form-group">
+              <label for="tshirt-size">Size:</label>
+              <select id="tshirt-size" name="tshirt_size" required>
+                <option value="">--Please choose a size--</option>
+                <option value="XS">XS</option>
+                <option value="S">S</option>
+                <option value="M">M</option>
+                <option value="L">L</option>
+                <option value="XL">XL</option>
+                <option value="XXL">XXL</option>
+              </select>
+            </div>
+
             
