--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -195,4 +195,10 @@
               </select>
             </div>
 
-            
+            <button type="submit">Place Order</button>
+          </fieldset>
+      </form>
+    </main>
+
+
+    
