updated my footer

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -201,4 +201,9 @@
     </main>
 
 
-    
+    <footer>
+      <!-- change to your name-->
+      <p>This Form is designed by <strong>Ifeyinwa C. Ofulue</strong><br><strong>UX</strong> Designer / <strong>Front-end</strong> Developer</p>
+    </footer>
+  </body>
+</html>
