img size adjusted to max-width

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,46 +9,36 @@
 </head>
 <body>
 
-   
-    <header class="header">
+    <header>
+      <header class="header">
         <h1>WIREFRAME TO WEB CODE</h1>
-        <p>A wireframe to web code process is the transformation of a visual layout plan into actual, functional web pages. <br> It's the process of turning a static design blueprint into a working website or a app.</p>
-    </header>
-
-    <main>
-      <section class="articles-container">
+        <p>A wireframe to web code process is the transformation of a visual layout plan into actual, functional web pages. <br> It's the process of turning a static design blueprint into a working website or a app.</p></p>
+      </header>
 
         <article>
-         <img 
-            srcset="img/codee.webp" 
-            alt="code" 
-            sizes="(width =< 600px) 480px, 800px" 
-            fetchpriority="high"/>     
-          
-         <div class="article">
+         <img srcset="img/codee.webp" alt="code" sizes="(max-width: 600px) 480px, 800px" fetchpriority="high"/>     
+          <div class="article">
           <h2>What's the purpose of a Wireframe</h2>
           <p>A wireframe to web code process is the transformation of a visual layout plan into actual, functional web pages. <br>It's the process of turning a static design blueprint into a working website or app.</p>
           <a href="https://www.productplan.com/glossary/wireframe/" target="_blank" rel="noopener noreferrer">Read more about Wireframes</a>
         </div>
         </article>
-  
+      
+      </section>
+      </header>
+
+    <main>
         <section class="articles-container">
 
             <article>
-              <img 
-                  src="img/readme.webp" 
-                  alt="Readme" 
-                  fetchpriority="high">
+              <img src="img/readme.webp" alt="Readme" fetchpriority="high">
                 <h2>What is the purpose of a README file?</h2>
                 <p>A README file is a "manual" for your project. It's the first file someone should read. It explains what the project is, how to install and use it, and how to contribute.</p>
                 <a href="https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-readmes" target="_blank" rel="noopener noreferrer">Read more about README file</a>
             </article>
 
             <article>
-              <img 
-                  src="img/forkgit.webp" 
-                  alt="forkgit" 
-                  fetchpriority="high">
+              <img src="img/forkgit.webp" alt="forkgit" fetchpriority="high">
                 <h2>What is a Git Branch?</h2>
                 <p>A Git branch is an independent "copy" of your project you can work on in isolation. It lets you develop new features (like a 'bio-page') without affecting the main 'main' version of your code.</p>
                 <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank" rel="noopener noreferrer">Read more about Git-Branch</a>
